--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+* {
+	box-sizing: border-box;
+}
+
 header{
 	background: LavenderBlush;
 	height: 100px;
-	position: sticky;
+	position: fixed;
 	top: 0%;
+	width: 100%;
+	z-index: 9999;
 }
 
 body {
@@ -135,6 +141,72 @@ section{
 	overflow: auto;
 }
 
+.slideshow-container {
+	max-width: 1000px;
+	margin: auto;
+	position: relative;
+}
+
+.mySlides {
+	display: none;
+}
+
+.prev, .next {
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	margin-top: -22px;
+	padding: 16px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+}
+
+
+.prev {
+	left: 0;
+}
+
+.next {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.text {
+	color: #f2f2f2;
+  	font-size: 15px;
+  	padding: 8px 12px;
+  	position: absolute;
+  	bottom: 8px;
+  	width: 100%;
+  	text-align: center;
+}
+
+.fade {
+	-webkit-animation-name: fade;
+  	-webkit-animation-duration: 1.5s;
+  	animation-name: fade;
+  	animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+	from {opacity: .4}
+  	to {opacity: 1}
+}
+
+@keyframes fade {
+	from {opacity: .4}
+  	to {opacity: 1}
+}
+
 div.toygallery {
 	margin: 5px;
 }
@@ -190,6 +262,8 @@ div.toygallery img:hover {
 	background: rgb(255, 192, 203);
 	
 }
+
+
 
 ul{
 	margin: 0;
